# jonline

./: .editorconfig  .gitignore  .gitmodules  .stylelintignore  Cargo.toml  Makefile  README.md  build.rs  ca.pem  docker-compose.yaml  kubernetes-lb.yaml  kubernetes.yaml
backend/: .env-example  .tls.crt  Cargo.toml  Makefile  README.md  build.rs
backend/docker/preview_generator/: Dockerfile
backend/docker/server/: Dockerfile  jonline_with_warmup.sh
backend/docker/server/nocookies/: manifest.json
backend/docker/server/ublock/: manifest.json
backend/k8s/: cert-manager.digitalocean.template.yaml  jonline.yaml  k8s-minio.yaml  k8s-postgres.yaml
backend/migrations/2022-06-29-210237_create_posts/: up.sql
backend/migrations/2022-07-07-192059_create_base_schema/: down.sql  up.sql
backend/migrations/2022-07-07-192059_create_users/: down.sql  up.sql
backend/migrations/2022-09-15-004155_add_preview_to_posts/: down.sql  up.sql
backend/migrations/2023-12-31-225034_add_federation_info_to_server_configurations/: down.sql  up.sql
backend/migrations/2024-02-24-235434_add_posts_to_all_event_instances/: down.sql  up.sql
backend/migrations/2024-03-23-202903_add_unauthenticated_star_count_to_posts/: down.sql  up.sql
backend/migrations/2024-04-09-161415_fix_events_with_mismatched_visibilities/: up.sql
backend/migrations/2024-05-04-020231_create_push_tokens/: down.sql  up.sql
backend/migrations/2024-05-10-173316_create_federated_users_and_profiles/: down.sql  up.sql
backend/migrations/2024-09-30-183428_add_device_name_to_user_refresh_tokens/: down.sql  up.sql
backend/migrations/2024-10-19-160704_add_web_push_config_to_server_configuration/: down.sql  up.sql
backend/migrations/2026-07-22-144348_add_search_text_to_posts/: down.sql  up.sql
backend/migrations/2026-07-22-202628_add_search_text_to_users/: down.sql  up.sql
backend/migrations/2026-07-23-012047_add_search_text_no_stopwords/: down.sql  up.sql
backend/src/: db_connection.rs  jonline.rs  jonline_service.rs  lib.rs  main.rs  minio_connection.rs  models.rs  protos.rs  rocket_servers.rs  schema.rs  tls.rs  tonic_server.rs
backend/src/auth/: get_auth_user.rs  get_current_user.rs  mod.rs  token_generation.rs  user_response.rs
backend/src/conversions/: configuration_conversions.rs  configuration_enum_conversions.rs  group_conversions.rs  id_conversions.rs  link_conversions.rs  listing_type_conversions.rs  mod.rs  permission_conversions.rs  post_conversions.rs  time_conversions.rs  user_conversions.rs  visibility_moderation_conversions.rs
backend/src/logic/: mod.rs  moderation_logic.rs  text_search_logic.rs  user_logic.rs  visibility_logic.rs
backend/src/marshaling/: configuration_enum_marshaling.rs  configuration_marshaling.rs  event_marshaling.rs  group_marshaling.rs  id_marshaling.rs  listing_type_marshaling.rs  media_marshaling.rs  mod.rs  permission_marshaling.rs  post_marshaling.rs  time_marshaling.rs  user_marshaling.rs  visibility_moderation_marshaling.rs
backend/src/models/: event_loaders.rs  event_models.rs  federation_models.rs  group_models.rs  media_models.rs  mod.rs  post_models.rs  push_models.rs  server_configuration_models.rs  user_models.rs
backend/src/proto_models/: mod.rs  user_permissions.rs
backend/src/protos/: mod.rs
backend/src/rpcs/: access_token.rs  configure_server.rs  create_account.rs  create_event.rs  create_follow.rs  create_group.rs  create_group_post.rs  create_membership.rs  create_post.rs  delete_event.rs  delete_follow.rs  delete_group.rs  delete_group_post.rs  delete_media.rs  delete_membership.rs  delete_post.rs  delete_user.rs  get_current_user.rs  get_events.rs  get_group_post.rs  get_group_posts.rs  get_groups.rs  get_media.rs  get_members.rs  get_post.rs  get_posts.rs  get_server_configuration.rs  get_service_version.rs  get_users.rs  login.rs  mod.rs  refresh_token.rs  reset_data.rs  update_event.rs  update_follow.rs  update_group.rs  update_group_post.rs  update_membership.rs  update_post.rs  update_user.rs
backend/src/rpcs/auth/: mod.rs  token_generation.rs
backend/src/rpcs/authentication/: access_token.rs  create_account.rs  get_current_user.rs  get_current_user_refresh_tokens.rs  login.rs  mod.rs  reset_password.rs
backend/src/rpcs/events/: create_event.rs  delete_event.rs  delete_event_attendance.rs  get_event_attendances.rs  get_events.rs  mod.rs  update_event.rs  upsert_event_attendance.rs
backend/src/rpcs/federation/: defederate_profile.rs  federate_profile.rs  get_federated_users.rs  mod.rs
backend/src/rpcs/groups/: create_group.rs  create_membership.rs  delete_group.rs  delete_membership.rs  get_groups.rs  get_members.rs  mod.rs  update_group.rs  update_membership.rs
backend/src/rpcs/media/: delete_media.rs  get_media.rs  mod.rs
backend/src/rpcs/posts/: create_group_post.rs  create_post.rs  delete_group_post.rs  delete_post.rs  get_group_posts.rs  get_posts.rs  mod.rs  star_post.rs  unstar_post.rs  update_group_post.rs  update_post.rs
backend/src/rpcs/server_configuration/: configure_server.rs  get_server_configuration.rs  mod.rs  reset_data.rs
backend/src/rpcs/users/: create_follow.rs  delete_follow.rs  delete_user.rs  get_users.rs  mod.rs  update_follow.rs  update_user.rs
backend/src/rpcs/validations/: configuration_validation.rs  field_validation.rs  fields.rs  group_validation.rs  matching.rs  mod.rs  operation_type.rs  permission.rs  permission_validation.rs  (+7 more)
backend/src/servers/: mod.rs  rocket.rs  tonic.rs
backend/src/tests/: factories.rs  get_posts_tests.rs  get_users_tests.rs  mod.rs  test_id_marshaling.rs
backend/src/web/: assets.rs  cached_compression.rs  catchers.rs  cors.rs  elm_web.rs  external_cdn.rs  flutter_web.rs  headers.rs  home_page.rs  ical_subscription.rs  jonline_path.rs  main_index.rs  media.rs  mod.rs  native_web.rs  post_page.rs  robots_sitemap.rs  rocket_state.rs  scoped_join.rs  secure_redirect.rs  server_information.rs  spa_file_or_username.rs  spa_pages.rs  spa_web_path.rs  styles.rs  tamagui_file_or_username.rs  tamagui_path.rs  tamagui_web.rs  web_macros.rs
backend/src/web_push/: mod.rs
(+488 files in other folders)
