[package]
name = "jonline"
version = "0.1.522"
edition = "2021"

authors = ["Jon Latané <jonlatane@gmail.com>"]

license = "GPL-3.0"
repository = "https://github.com/jonlatane/jonline"
description = "Backend of Jonline"
default-run = "jonline"

[dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-stream = "0.1.11"
tonic = { version = "0.9.0", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
  "gzip",
] }
tonic-reflection = "0.9.0"
tonic-web = "0.9.0"
tower-http = "0.4.0" # used to configure CORS for Tonic Web
rocket = { version = "0.5.0-rc.3", features = ["tls"] }
# rocket_async_compression = "0.3.0"
rocket_async_compression = { git = "https://github.com/JonLatane/rocket_async_compression.git", branch = "with-speed-tweakability"}
rocket-cache-response = "0.6.2"
futures = "0.3.24"
prost = "0.11.8"
prost-build = "0.11.8"
prost-types = { version = "0.11.8", features = ["std"] }
prost-wkt = "0.4.1"
prost-wkt-types = "0.4.1"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "2.0.0"
serde = "1.0.144"
serde_json = "1.0.85"
dotenv = "0.15.0"
bcrypt = "0.14.0"
bs58 = "0.4.0"
ring = "0.16.20"
regex = "1.6.0"
itertools = "0.10.5"
anyhow = "1.0.65"
headless_chrome = "1.0.4"
log = "0.4.17"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
env_logger = "0.10.0"
rust-s3 = { version="0.33.0" }
aws-creds = "0.34.1"
aws-region = "0.25.1"
bytes = "1.4.0"
tempfile = "3.5.0"
percent-encoding = "2.3.0"

[build-dependencies]
tonic-build = "0.9.1"
prost-wkt-build = "0.4.1"
