[package]
name = "jonline"
version = "0.2.532"
edition = "2021"

authors = ["Jon Latané <jonlatane@gmail.com>"]

license = "AGPL"
repository = "https://github.com/jonlatane/jonline"
description = "Jonline is a decentralized social network server."
homepage = "https://jonline.io"
default-run = "jonline"
readme = "README.md"

[dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-stream = "0.1.11"
tonic = { version = "0.12.1", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
  "gzip",
] }
tonic-reflection = "0.12.1"
tonic-web = "0.12.1"
tower-http = "0.5.2" # used to configure CORS for Tonic Web
rocket = { version = "0.5.0", features = ["tls"] }
rocket_async_compression = "0.5.0"
async-compression = "0.4.0"
rocket-cache-response = "0.6.2"
futures = "0.3.24"
chrono = "0.4.31"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = { version = "0.13.1", features = ["std"] }
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "2.0.0"
serde = "1.0.144"
serde_json = "1.0.85"
dotenv = "0.15.0"
bcrypt = "0.15.0"
bs58 = "0.5.0"
ring = "0.17.3"
regex = "1.6.0"
itertools = "0.13.0"
anyhow = "1.0.65"
log = "0.4.17"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
lazy_static = "1.4.0"
env_logger = "0.11.5"
rust-s3 = { version="0.34.0" }
aws-creds = "0.36.0"
aws-region = "0.25.1"
bytes = "1.4.0"
tempfile = "3.5.0"
percent-encoding = "2.3.0"
ico = "0.3.0"

# For Preview Generator images only
headless_chrome = "1.0.4"

# For LoadBalancer only
# async-tls = "0.12.0"

# async-std = "1.12.0"
# futures-lite = "2.2.0"
# rustls = "0.22.2"
async-std = "1.11.0"
async-tls = "0.13.0"
futures-lite = "2.3.0"
rustls = { version = "0.23.12", features = ["ring"] }
rustls-pemfile = "2.1.3"
structopt = "0.3.9"
# reqwest = "0.11.23"
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls"] }

rand = "0.8.5"
http = "1.1.0"
base64 = "0.22.1"

[build-dependencies]
tonic-build = "0.12.1"
prost-wkt-build = "0.6.0"
